Fix alignments

--- a/source/assets/css/dependencies/typography/_text-align.scss
+++ b/source/assets/css/dependencies/typography/_text-align.scss
@@ -1,4 +1,5 @@
 /* ---------------------------------------------------------------------------
 /* TEXT-ALIGN */
 
-%text-align { text-align: center; }
+%text-align-center { text-align: center; }
+%text-align-left   { text-align: left;   }
